--- a/public/Kanbas/style.css
+++ b/public/Kanbas/style.css
@@ -6,3 +6,13 @@ body {
 body * {
     font-family: LatoWeb, "Lato Extended", Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }  
+
+body.wd-nomargin {
+    margin: 0;
+}
+
+@media screen and (max-width: 576px) {
+    .wd-xs-browser-display {
+      display: none;
+    }
+}
